[gd_scene load_steps=14 format=1]

[ext_resource path="res://rcos_core/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://modules/widget_panels/panel_window/widget_panel_gui.gd" type="Script" id=2]
[ext_resource path="res://modules/widget_panels/panel_window/widget_panel_io_ports.tscn" type="PackedScene" id=3]
[ext_resource path="res://modules/widget_panels/graphics/icons/edit_widget.png" type="Texture" id=4]
[ext_resource path="res://modules/widget_panels/graphics/icons/add_widget.png" type="Texture" id=5]
[ext_resource path="res://modules/widget_panels/graphics/icons/add_output_port.png" type="Texture" id=6]
[ext_resource path="res://modules/widget_panels/graphics/icons/add_input_port.png" type="Texture" id=7]
[ext_resource path="res://rcos_core/looks/prototype/button_focus.tres" type="StyleBox" id=8]
[ext_resource path="res://rcos_core/lib/widget_grid.tscn" type="PackedScene" id=9]
[ext_resource path="res://modules/widget_panels/panel_window/reshape_grid.tscn" type="PackedScene" id=10]
[ext_resource path="res://modules/widget_panels/widget_factories_panel/widget_factories_panel.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.305882, 0.145098, 0.145098, 1 )
dark_color = Color( 0.862745, 0.360784, 0.360784, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.552941, 0.262745, 0.262745, 1 )
light_color = Color( 0.862745, 0.360784, 0.360784, 1 )
dark_color = Color( 0.305882, 0.145098, 0.145098, 1 )
border_size = 2
border_blend = true
draw_bg = true

[node name="widget_panel_gui" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="widget_panel_io_ports" parent="." instance=ExtResource( 3 )]

[node name="vsplit" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="buttons" type="HBoxContainer" parent="vsplit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 40.0
custom_constants/separation = 0
alignment = 0

[node name="edit_widgets_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="add_widget_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="add_output_port_button" type="Button" parent="vsplit/buttons"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="add_input_port_button" type="Button" parent="vsplit/buttons"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="fullscreen_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 99.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FS"
flat = false

[node name="save_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 0.0
margin/right = 130.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="load_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 0.0
margin/right = 161.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="edit_buttons" type="HBoxContainer" parent="vsplit"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 241.0
margin/bottom = 61.0
custom_constants/separation = 0
alignment = 0

[node name="raiselower" type="Button" parent="vsplit/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 21.0
margin/bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R/L"
flat = false

[node name="reshape" type="Button" parent="vsplit/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 0.0
margin/right = 48.0
margin/bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rshp"
flat = false

[node name="rotate" type="Button" parent="vsplit/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rot"
flat = false

[node name="delete" type="Button" parent="vsplit/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 0.0
margin/right = 88.0
margin/bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Del"
flat = false

[node name="configure" type="Button" parent="vsplit/edit_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 0.0
margin/right = 114.0
margin/bottom = 21.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Conf"
flat = false

[node name="grid_area" type="Control" parent="vsplit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 40.0
margin/right = 240.0
margin/bottom = 400.0

[node name="widget_grid" parent="vsplit/grid_area" instance=ExtResource( 9 )]

anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.152344, 0.152344, 0.152344, 1 )
grid_color = Color( 0, 0, 0, 0 )

[node name="reshape_controls" type="Control" parent="vsplit/grid_area"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="reshape_grid" parent="vsplit/grid_area" instance=ExtResource( 10 )]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0

[node name="widget_factories_panel" parent="." instance=ExtResource( 11 )]

visibility/visible = false


